syntax = "proto3";

package product.v1alpha;

message Product {
  string name = 1;
  int32 id = 2;
  int32 price = 3;
  int32 description = 4;
}

service ProductCRUDService {
  rpc Get(GetRequest) returns (GetResponse);
  rpc Add(AddRequest) returns (AddResponse);
  rpc Update(UpdateRequest) returns (UpdateResponse);
  rpc Delete(DeleteRequest) returns (DeleteResponse);
}

message GetRequest {
  string name = 1;
  int32 id = 2;
}

message GetResponse {
  repeated Product products = 1;
}

message AddRequest {
  string name = 1;
  int32 price = 2;
}

message AddResponse {
  Product product = 1;
}

message UpdateRequest {
  int32 id = 1;
  string name = 2;
  int32 price = 3;
}

message UpdateResponse {
  Product product = 1;
}

message DeleteRequest {
  int32 id = 1;
}

message DeleteResponse {
  string message = 1;
}
